Fixes for OneFS compile

--- a/src/Makefile.onefs8
+++ b/src/Makefile.onefs8
@@ -1,9 +1,13 @@
 all: pwalk wacls hacls chexcmp touch3 mystat pwalk_ls_cat
 
 BINDIR=../bin/onefs8
-// NOTE: pwalk_audit.h is a dependency, but gets conditionally #include'd inline by pwalk.c
-PWALK_C=pwalk.c pwalk_audit.c pwalk_onefs.c pwalk_sums.c pwalk_report.c 
-PWALK_H=pwalk.h pwalk_audit.h pwalk_onefs.h pwalk_sums.h
+# NOTE: pwalk_audit.h is a dependency, but gets conditionally #include'd inline by pwalk.c
+# audit currently broken due to missing source file
+# PWALK_C=pwalk.c pwalk_audit.c pwalk_onefs.c pwalk_sums.c pwalk_report.c
+# PWALK_H=pwalk.h pwalk_audit.h pwalk_onefs.h pwalk_sums.h
+HASHLIB_C=hashlib/crc32.c hashlib/md5.c
+PWALK_C=pwalk.c pwalk_onefs.c pwalk_sums.c pwalk_report.c $(HASHLIB_C)
+PWALK_H=pwalk.h pwalk_onefs.h pwalk_sums.h
 
 PWALK_LIBS=-lisi_persona -lisi_acl -lisi_util -lm -lrt -lpthread
 
